--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This portfolio contains programming projects which I have completed either independently or through coursework.
+This portfolio contains programming projects which I have independently pursued and completed.
